crates/toml_edit/tests/fixtures/invalid/float-underscore-after.stderr
TOML parse error at line 1, column 11
  |
1 | bad = 1.2_
  |           ^
Invalid floating-point number
Expected digit, digit
